<resources>
    <string name="app_name">Assignment 1</string>
    <string name="action_settings">Settings</string>
    <string name="usd_string">USD</string>
    <string name="output">CAD Currency Converter</string>
    <string name="eur">EUR</string>
    <string name="jpy">JPY</string>
    <string name="gbp">GBP</string>
    <string name="chf">CHF</string>
    <string name="mxn">MXN</string>
    <string name="inr">INR</string>
    <string name="sek">SEK</string>
    <string name="rub">RUB</string>
    <string name="aud">AUD</string>
    <string name="egp">EGP</string>
    <string name="nzd">NZD</string>
    <string name="cny">CNY</string>
    <string name="tap_a_button_to_display_the_conversion">Tap a Button to Display the Conversion</string>
    <string name="cad_dollar">Enter Canadian Dollar</string>
</resources>
